# com_music_w_go

./: .gitignore  init.nix  note
go_client/: go.mod  go.sum  main.go
rust_server/rust_serv/: .Cargo.toml.kate-swp  Cargo.toml  init.nix  private_key.pem  public_certificate.pem  server_cert.pem  server_key.pem
rust_server/rust_serv/src/: main.rs
rust_server/rust_serv/src/experimental/: main.rs
rust_server/rust_serv/src/music_reading/: .mod.rs.kate-swp
rust_server/rust_serv/src/server/: main.rs
