[package]
name = "rust_serv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"

msquic-async = { version = "0.3.0", features = ["quictls"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[bin]]
name = "experimental"
path = "src/experimental/main.rs"
[[bin]]
name = "server"
path = "src/server/main.rs"
